feat: atualiza a proposta de estudo

--- a/notebooks/analise_acessibilidade_sp_simples.ipynb
+++ b/notebooks/analise_acessibilidade_sp_simples.ipynb
@@ -23459,10 +23459,11 @@
    "source": [
     "### 🔍 Proposta de Estudo\n",
     "\n",
-    "Este estudo propõe:\n",
-    "- Mapear a distribuição de unidades de saúde pública na cidade de São Paulo\n",
-    "- Identificar visualmente áreas com concentração ou ausência de cobertura\n",
-    "- Sugerir regiões que podem se beneficiar de novos investimentos em saúde pública com base na dispersão geográfica\n"
+    "- Representar visualmente as unidades de saúde em mapas interativos, classificando-as conforme o tipo de serviço oferecido (como hospitais, clínicas e centros de saúde), facilitando a compreensão da distribuição territorial desses equipamentos.\n",
+    "\n",
+    "- Elaborar mapas de calor que evidenciem áreas com maior concentração de unidades de saúde e revelem zonas urbanas com baixa ou nenhuma cobertura, permitindo a identificação de padrões espaciais relevantes.\n",
+    "\n",
+    " - Indicar regiões com carência de infraestrutura de saúde com base na distribuição territorial observada, contribuindo para o direcionamento de investimentos e ações de planejamento urbano voltadas à ampliação do acesso à saúde."
    ]
   }
  ],
